--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 :root {
     --darckgreen: #245852;
     --green: #01996D;
@@ -38,12 +39,39 @@ img {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
+}
+ /* burger */
+ .burger {
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    padding: 0;
+    background-color: var(--green);
+    border: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+}
+.burger__line {
+  display: none;
+  width: 21px;
+  height: 3px;
+  background-color: #ffffff;
+  margin-bottom: 4px;
+  color: #ffffff;
+}
+.burger__line:last-child {
+    margin-bottom: 0;
 }
 /* nav style start **********************************************************************/
 .nav__list {
     display: flex;
     align-items: center;
     gap: 72px;
+    padding-left: 0;
 }
 .nav__item {
     list-style-type: none;
@@ -67,6 +95,7 @@ img {
 }
 .nav__btn {
     padding: 13px 50px;
+    /* padding: 1.23rem 3.85rem; */
     border-radius: 4px;
     border: 1px solid var(--green);
     background-color: var(--green);
@@ -116,7 +145,7 @@ img {
 .works__desc {
     display: flex;
     justify-content: space-between;
-    /* align-items: start; */
+    flex-wrap: wrap;
 }
 .works__desc-title {
     width: 100%;
@@ -140,11 +169,12 @@ img {
 .works__main {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     gap: 95px;
 }
 .work__card {
     width: 100%;
-    min-width: 390px;
+    max-width: 390px;
 }
 .work__card_first {
     padding-top: 82px;
@@ -200,6 +230,7 @@ img {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    /* flex-wrap: wrap; */
 }
 .story__item-descr {
     width: 100%;
@@ -252,6 +283,7 @@ img {
     display: flex;
     justify-content: center;
     gap: 86.86px;
+    flex-wrap: wrap;
 }
 .product__items-left {
     width: 100%;
@@ -373,4 +405,104 @@ img {
     font-weight: 600px;
     color: var(--white);
     text-decoration: none;
+}
+/* @media */
+
+@media screen and (max-width: 1400px) {
+    /* header */
+    .intro {
+       min-height: 660px;
+    }
+    .works__inner {
+        padding-top: 120px;
+    }
+    .works__main {
+        justify-content: center;
+        gap: 30px;
+    }
+    .footer__inner {
+        padding-left: 20px;
+    }
+   
+}
+@media screen and (max-width: 1200px) {
+    .intro {
+        min-height: 560px;
+     }
+     /* works */
+     .works__inner {
+        padding-top: 100px;
+    }
+    p.works__desc-text {
+        margin: 0 auto;
+    }
+     /* story */
+     .story__inner {
+        gap: 30px;
+        flex-wrap: wrap;
+    }
+    .story__item-descr {
+        padding-left: 4%;
+    }
+    .story__image-box {
+        margin: 0 auto;
+    }
+     /* product */
+     .product__inner {
+        gap: 150px;
+    }
+}
+@media screen and (max-width: 992px) {
+    /* intro */
+    .intro {
+        min-height: 464px;
+     }
+    .intro__inner {
+        padding-top: 80px;
+     }
+     /* burger */
+    .burger {
+        opacity: 1;
+    }
+    .burger__line {
+        display: block;
+    }
+    .nav__list {
+        display: none;
+    }
+     /* works */
+     .works__inner {
+        padding-top: 80px;
+    }
+    .works__main {
+        justify-content: space-around;
+    }
+    .work__card_second {
+        padding-top: 150px;
+    }
+    .work__card_third {
+        padding-top: 120px;
+    }
+}
+   
+@media screen and (max-width: 768px) {
+    .header__inner {
+        justify-content: space-evenly;
+    }
+    .intro {
+        min-height: 360px;
+    }
+    .intro__inner {
+        padding-top: 5px;
+    }
+}
+
+@media screen and (max-width: 563px) {
+    .header__inner {
+        gap: 20px;
+    }
+    .intro {
+       background-size: cover;
+       background-position: center; 
+    }
 }
